<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/cartImage"
        android:layout_width="@android:dimen/notification_large_icon_height"
        android:layout_height="@android:dimen/notification_large_icon_width" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/prodcutCartName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NameTV"
            android:textSize="@dimen/NormalTextSize"/>

        <TextView
            android:layout_below="@id/prodcutCartName"
            android:id="@+id/prodcutCartColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ColorTV"
            android:layout_weight="1"
            android:textSize="@dimen/NormalTextSize" />
    </RelativeLayout>

    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/prodcutCartQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QuantityTv"
        android:layout_weight="1"
        android:textSize="@dimen/NormalTextSize" />

    <TextView
        android:id="@+id/productCartPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:textSize="@dimen/NormalTextSize"
        android:text="@string/PriceTv"/>

</LinearLayout>
</LinearLayout>